# emsn-bats

./: CLAUDE.md  README.md  pyproject.toml  requirements.lock.txt  requirements.txt
config/: logrotate-emsn-sonar
database/migrations/: 001_create_bat_detections.sql
scripts/archive/: audio_archive_sync.sh  cleanup.py
scripts/backup/: sd_backup_rsync.sh
scripts/batty/: batty_watcher.py
scripts/bavaria/: bavaria_watcher.py
scripts/core/: config.py  database.py  secrets.py  species.py  species_frequencies.py  sun.py  systemd_notify.py
scripts/detection/: bat_monitor.py  mqtt_publisher.py  pulse_structure_filter.py  sonar_monitor.py  (+2 more)
systemd/: bat-cleanup.service  bat-cleanup.timer  bat-monitor.service  bat-sync.service  bat-sync.timer  batty-sync.service  batty-sync.timer  emsn-bats-web.service  emsn-sonar-web.service  sonar-audio-archive-sync.service  sonar-audio-archive-sync.timer  sonar-batdetect2-sync.service  sonar-batdetect2-sync.timer  sonar-bavaria-sync.service  sonar-bavaria-sync.timer  sonar-bavaria.service  sonar-cleanup.service  sonar-cleanup.timer  sonar-detection-silence.service  sonar-detection-silence.timer  sonar-ha-discovery.service  sonar-hardware-monitor.service  sonar-monitor.service  sonar-reboot-alert.service  sonar-sd-backup.service  sonar-sd-backup.timer  sonar-stats-publisher.service  sonar-stats-publisher.timer
tests/: conftest.py  test_bavaria_watcher.py  test_database_concurrency.py  test_imports.py  test_mqtt_publisher.py  test_pulse_structure_filter.py  test_silence_check.py  test_species_frequencies.py
web/: app.py
(+21 files in other folders)
