[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emsn-sonar"
version = "0.2.0"
description = "EMSN vleermuisdetectie met BatDetect2 + BattyBirdNET-Bavaria"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]
