[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "emsn-sonar"
version = "0.2.0"
description = "EMSN vleermuisdetectie met BatDetect2 + BattyBirdNET-Bavaria"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = [
    # ai-edge-litert spamt deze bij alle test imports.
    "ignore:Enabling `experimental_preserve_all_tensors`:UserWarning",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
explicit_package_bases = true
warn_unused_configs = true
no_strict_optional = true
exclude = [
    "venv/",
    ".venv/",
    "__pycache__/",
    "data/",
    "recordings/",
    "spectrograms/",
]
